@@ -31,7 +31,7 @@ module.exports.run = async (bot, message, args, messageArray) => {
     }, (err, res) => {
         if (err) {
             errors.databaseError(message);
-            console.log(err);
+            return console.log(err);
         }
         
         if (!res){
