@@ -12,24 +12,29 @@ module.exports.run = (bot, message, args, messageArray) => {
     coinsSchema.findOne({
         guildID: message.guild.id,
         userID: message.author.id
-    }, (err, res) => {
+    }, (err, walletRes) => {
         if (err){
             console.log(err);
-            errors.databaseError(message);
+            return errors.databaseError(message);
         }
 
-        if (!res || res.coins < 1){
+        if (!walletRes || walletRes.coins < 1){
             const noCoinsEmbed = new Discord.RichEmbed()
                 .setAuthor(message.author.tag, message.author.avatarURL)
                 .setColor("FF0000")
                 .setDescription("You don't have anything to deposit.");
             message.channel.send(noCoinsEmbed);
         }else{
-            if (!isNaN(args[0])){
+            if (args[0] === "all"){
+                toDeposit = walletRes.coins;
+            }
+            else if (!isNaN(args[0])){
                 toDeposit = parseInt(args[0]);
             }else{
-                toDeposit = res.coins;
+                return errors.wrongCommandUsage(message, this.config.usage)
             }
+
+
             if (toDeposit <= 0) {
                 const noZero = new Discord.RichEmbed()
                     .setAuthor(message.author.tag, message.author.avatarURL)
@@ -38,7 +43,7 @@ module.exports.run = (bot, message, args, messageArray) => {
                 return message.channel.send(noZero);
             }
 
-            if (toDeposit > res.coins){
+            if (toDeposit > walletRes.coins){
                 const notEnough = new Discord.RichEmbed()
                     .setAuthor(message.author.tag, message.author.avatarURL)
                     .setColor("FF0000")
@@ -46,8 +51,9 @@ module.exports.run = (bot, message, args, messageArray) => {
                 return message.channel.send(notEnough);
             }
 
-            res.coins = res.coins - toDeposit;
-            res.save().catch(err => {
+            walletRes.coins = walletRes.coins - toDeposit;
+
+            walletRes.save().catch(err => {
                 console.log(err);
                 errors.databaseError(message);
             });
@@ -55,12 +61,12 @@ module.exports.run = (bot, message, args, messageArray) => {
             bankSchema.findOne({
                 guildID: message.guild.id,
                 userID: message.author.id
-            }, (err, res) => {
+            }, (err, bankRes) => {
                 if (err){
                     console.log(err);
-                    errors.databaseError(message);
+                    return errors.databaseError(message);
                 }
-                if (!res){
+                if (!bankRes){
                     const newData = new bankSchema({
                         guildID: message.guild.id,
                         userID: message.author.id,
@@ -71,16 +77,17 @@ module.exports.run = (bot, message, args, messageArray) => {
                         errors.databaseError(message);
                     });
                 }else{
-                    res.coins = res.coins + toDeposit;
-                    res.save().catch(err => {
+                    bankRes.coins = bankRes.coins + toDeposit;
+                    bankRes.save().catch(err => {
                         console.log(err);
                         errors.databaseError(message);
                     });
                 }
                 const depositedEmbed =  new Discord.RichEmbed()
                     .setAuthor(message.author.tag, message.author.avatarURL)
+                    .setTitle("Deposit")
                     .setColor(bot.settings.embedColor)
-                    .setDescription(`${toDeposit} coins has been moved to your bank.`);
+                    .setDescription(`💰 **Wallet:** \`${walletRes.coins}\` \n🏦 **Bank:** \`${bankRes.coins}\` \n💳 **Deposited:** \`${toDeposit}\``);
                 message.channel.send(depositedEmbed);
             });
         }
