@@ -23,7 +23,7 @@ module.exports.run = (bot, message, args, messageArray) => {
     }, (err, res) => {
         if (err) {
             errors.databaseError(message);
-            console.log(err);
+            return console.log(err);
         }
 
         if (toDonateAmt <= 0) {
@@ -56,7 +56,7 @@ module.exports.run = (bot, message, args, messageArray) => {
         }, (err, res) => {
             if (err) {
                 errors.databaseError(message);
-                console.log(err);
+                return console.log(err);
             }
 
             if (!res) {
