@@ -5,6 +5,6 @@
   "mainChatChannel": "583720527026192396",
   "botCommandsChannel": "586894247572013076",
   "modMailChannel": "586894247572013076",
-  "guildID": "585897760729989140",
+  "guildID": "403564806071648258",
   "welcomeChannel": "586023566806351881"
 }
